# todoist-rs

./: Cargo.toml  README.md  default.nix  flake.nix  plan.md  shell.nix  ui.txt
src/: api.rs  main.rs  tui.rs  ui.rs
src/api/: mod.rs  request.rs
src/app/: api.rs  mod.rs  ui.rs
src/app/api/: mod.rs  request.rs
src/cache/: api.rs  mod.rs  queue.rs
