[package]
name = "todoist-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
http = "1.1.0"
ratatui = "0.26.3"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
